// Vitest Snapshot v1

exports[`read lock file > read templates should work 1`] = `
[
  {
    "_name": "@aiou/webext-template",
    "cached": false,
    "name": "@aiou/webext-template",
    "pref": "@aiou/webext-template",
    "preset": "neo",
  },
  {
    "_name": "ts-lib-template",
    "cached": false,
    "name": "ts-lib-template (@aiou/ts-lib-template)",
    "pref": "@aiou/ts-lib-template",
    "preset": "demo",
  },
  {
    "_name": "ts-lib-template",
    "cached": false,
    "name": "ts-lib-template (https://github.com/egoist/ts-lib-starter)",
    "pref": "https://github.com/egoist/ts-lib-starter",
    "preset": "neo",
  },
  {
    "_name": "bin-template#unbundle",
    "cached": true,
    "id": "id3",
    "name": "bin-template#unbundle",
    "pref": "@aiou/bin-template@2.x",
    "preset": "neo",
    "resolvedVia": "npm-registry",
    "version": "2.1.0",
  },
  {
    "_name": "bin-template#bundle",
    "cached": true,
    "id": "id2",
    "name": "bin-template#bundle",
    "pref": "@aiou/bin-template",
    "preset": "neo",
    "resolvedVia": "npm-registry",
    "version": "1.0.0",
  },
  {
    "_name": "react-template",
    "cached": true,
    "id": "id4",
    "name": "react-template",
    "pref": "@aiou/react-template",
    "resolvedVia": "npm-registry",
    "version": "1.0.0",
  },
]
`;

exports[`read lock file > read with preset filter should work 1`] = `
[
  {
    "_name": "@aiou/webext-template",
    "cached": false,
    "name": "@aiou/webext-template",
    "pref": "@aiou/webext-template",
    "preset": "neo",
  },
  {
    "_name": "ts-lib-template",
    "cached": false,
    "name": "ts-lib-template",
    "pref": "https://github.com/egoist/ts-lib-starter",
    "preset": "neo",
  },
  {
    "_name": "bin-template#unbundle",
    "cached": true,
    "id": "id3",
    "name": "bin-template#unbundle",
    "pref": "@aiou/bin-template@2.x",
    "preset": "neo",
    "resolvedVia": "npm-registry",
    "version": "2.1.0",
  },
  {
    "_name": "bin-template#bundle",
    "cached": true,
    "id": "id2",
    "name": "bin-template#bundle",
    "pref": "@aiou/bin-template",
    "preset": "neo",
    "resolvedVia": "npm-registry",
    "version": "1.0.0",
  },
]
`;

exports[`write lock file > update preset should work 1`] = `
{
  "presets": {
    "neo": {
      "templates": [
        {
          "name": "@aiou/bin-template",
        },
      ],
    },
  },
}
`;

exports[`write lock file > update templates should work 1`] = `
{
  "presets": {
    "neo": {
      "templates": [
        {
          "name": "@aiou/bin-template",
        },
      ],
    },
  },
  "templates": {
    "/@aiou/ts-lib-template/0.5.0": {
      "name": "@aiou/ts-lib-template",
    },
  },
}
`;
